--- a/src/layouts/MDXLayout.astro
+++ b/src/layouts/MDXLayout.astro
@@ -147,9 +147,9 @@ const { frontmatter } = Astro.props;
 
   <script>
     // Initialization for ES Users
-    import { Carousel, initTE } from "tw-elements";
+    import { Carousel, initTWE } from "tw-elements";
 
-    initTE({ Carousel });
+    initTWE({ Carousel });
   </script>
 
 
