2024 Apr 12 - Gallery Layout Test

--- a/src/layouts/MDXLayout.astro
+++ b/src/layouts/MDXLayout.astro
@@ -13,7 +13,7 @@ const photos = await res.json();
   <h2>Post author: {frontmatter.author}</h2>
   <p>{frontmatter.description}</p>
   <h3>{frontmatter.album}</h3>
-
+  <!-- Markdown content is injected here -->
   <slot />
   <!-- Markdown content is injected here -->
 
