--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Hr from "./Hr.astro";
 import LinkButton from "./LinkButton.astro";
 
 export interface Props {
-  activeNav?: "posts" | "travels" | "tags" | "about" | "search" | "test";
+  activeNav?: "posts" | "travels" | "tags" | "about" | "search";
 }
 
 const { activeNav } = Astro.props;
