--- a/src/components/ImageCard.astro
+++ b/src/components/ImageCard.astro
@@ -1,7 +1,11 @@
 ---
 // AstroDoc: https://docs.astro.build/en/recipes/build-custom-img-component/
 // Recipe: https://docs.astro.build/en/recipes/dynamically-importing-images/#recipe
-import { getAlbumPhotos, getRandomImage, getFileName } from "@utils/library.ts";
+import {
+  getAlbumPhotos,
+  getRandomImage,
+  getFileName,
+} from "@components/Library.astro";
 import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 interface Props {
@@ -16,13 +20,13 @@ const { imagePath, altText, twCSS, maxWidth } = Astro.props;
 
 // const { imagePath, altText, name, age } = Astro.props;
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  "./src/images/*.{jpeg,jpg,png,gif,svg}"
+  "/src/assets/images/*.{jpeg,jpg,png,gif,svg}"
 );
 
 const imageItem = getRandomImage(images);
 const imageName = getFileName(imagePath);
 
-// console.log("Random image metadata:",imageItem," --> from props: ",imagePath);
+// console.log("Get some image imported: 🤮 ", await images[imageItem]());
 ---
 
 <div class={twCSS}>
