--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,10 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Adventum</h1>
+      <div class="flex justify-center">
+        <h1>Adventum</h1>
+      </div>
+
       <Image src={mtnTops} alt="top of the mtn" />
       <p>
         Welcome adventurers! Enjoy some of the photos highligting places we've
