--- a/src/layouts/MDXLayout.astro
+++ b/src/layouts/MDXLayout.astro
@@ -6,7 +6,7 @@ let photos = await getAlbumPhotos(`${frontmatter.album}`);
 //   `https://api.skicyclerun.com/getphotosrandom?bucketName=skicyclerun.lib&albumPath=albums/${frontmatter.album}/&numPhotos=50`
 // );
 // const photos = await res.json();
-// console.log("📷 ~ photos:\n", photos);
+// console.log("[DEBUG Console] 📷 ~ photos:\n", photos);
 ---
 
 <html>
