2024-Mar-24 Update defaults and MDX names, etc...

--- a/src/components/Library.astro
+++ b/src/components/Library.astro
@@ -23,17 +23,16 @@ export async function getImgMeta(imgPath: string) {
 export async function getAlbumPhotos(album: any): Promise<any[]> {
   try {
     let photos = [];
-    if (album != "local") {
+    if (album !== "local") {
       const photoURL = `https://api.skicyclerun.com/getphotosrandom?bucketName=skicyclerun.lib&albumPath=albums/${album}/&numPhotos=150`;
       console.log("[DEBUG] 🌎 URL: ", photoURL);
       const res = await fetch(photoURL);
       photos = await res.json();
       console.log("[DEBUG] 🌎 Photos: ", photos);
-      if (photos.message == "Internal server error") {
-        photos = await getAlbumPhotos("default");
-        if (photos.message == "Internal server error") {
-          photos = await getLocalImages();
-        }
+
+      // Likely a miss match on album name - or S3 unavail where then local SVG are served
+      if (photos.message === "Internal server error") {
+        photos = (await getAlbumPhotos("default")) || (await getLocalImages());
       }
     } else {
       photos = await getLocalImages();
@@ -42,7 +41,7 @@ export async function getAlbumPhotos(album: any): Promise<any[]> {
     // console.log("DEBUG: LIB AFTER: 👉", photos);
     return photos;
   } catch (error) {
-    console.log("ERROR", error);
+    console.log("ERROR:getAlbumPhotos", error);
     throw error;
   }
 }
