2025-07-25 - Lite changes to feature and version

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,9 +32,10 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
       <Image src={mtnTops} alt="top of the mtn" />
       <p>
-        Welcome adventurers! Enjoy some of the photos highligting places we've
-        traveled so far! 🎿🚴‍♀️🥾 This site include some areas of interest such as
-        astromonomy/physics, AI topics & programming. 💻🔭
+        🌍 Travel & Terrain Photos from the road—mountains, bikes, hikes. Places visited, moments captured, & past paths retraced. 🎿🚴‍♀️🥾
+      </p>
+      <p>
+        🔬 Knowledge & Code Topics span space, physics, AI, and programming. Clean ideas, clear logic, endless exploration. 💻🔭
       </p>
       <p class="my-50 m-20">
         This project tech-stack is based on Astro.Build. Details as well as
