2025-07-25  Layout cleanup and JSON fix

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -60,14 +60,14 @@ const layoutProps = {
     </button>
   </div>
   <main id="main-content">
-    <h1 transition:name={slugifyStr(title)} class="post-title">
+    <!-- <h1 transition:name={slugifyStr(title)} class="post-title">
       {title}
-    </h1>
+    </h1> -->
     <Datetime
       pubDatetime={pubDatetime}
       modDatetime={modDatetime}
       size="lg"
-      className="my-2"
+      className="my-1"
     />
     <article id="article" role="article" class="prose mx-auto mt-8 max-w-3xl">
       <Content />
