Update dependencies and enhance photo carousel layout with interactive features

--- a/src/layouts/MDXCarousel.astro
+++ b/src/layouts/MDXCarousel.astro
@@ -22,7 +22,7 @@ if (!photos) throw new Error(`"${photos}" is empty upon return call"`);
               imagePath={photos[0]}
               altText="skicyclerun"
               twCSS="block h-full w-full rounded-lg object-cover object-center"
-              maxWidth="480"
+              maxWidth={480}
             />
           </div>
           <div class="md:p-2 w-1/2 p-1">
@@ -30,7 +30,7 @@ if (!photos) throw new Error(`"${photos}" is empty upon return call"`);
               imagePath={photos[1]}
               altText="skicyclerun"
               twCSS="block h-full w-full rounded-lg object-cover object-center"
-              maxWidth="480"
+              maxWidth={480}
             />
           </div>
           <div class="md:p-2 w-full p-1">
@@ -38,7 +38,7 @@ if (!photos) throw new Error(`"${photos}" is empty upon return call"`);
               imagePath={photos[2]}
               altText="skicyclerun"
               twCSS="block h-full w-full rounded-lg object-cover object-center"
-              maxWidth="480"
+              maxWidth={480}
             />
           </div>
         </div>
@@ -48,7 +48,7 @@ if (!photos) throw new Error(`"${photos}" is empty upon return call"`);
               imagePath={photos[3]}
               altText="skicyclerun"
               twCSS="block h-full w-full rounded-lg object-cover object-center"
-              maxWidth="480"
+              maxWidth={480}
             />
           </div>
           <div class="md:p-2 w-1/2 p-1">
@@ -56,7 +56,7 @@ if (!photos) throw new Error(`"${photos}" is empty upon return call"`);
               imagePath={photos[4]}
               altText="skicyclerun"
               twCSS="block h-full w-full rounded-lg object-cover object-center"
-              maxWidth="480"
+              maxWidth={480}
             />
           </div>
           <div class="md:p-2 w-1/2 p-1">
@@ -64,7 +64,7 @@ if (!photos) throw new Error(`"${photos}" is empty upon return call"`);
               imagePath={photos[5]}
               altText="skicyclerun"
               twCSS="block h-full w-full rounded-lg object-cover object-center"
-              maxWidth="480"
+              maxWidth={480}
             />
           </div>
         </div>
